# iris

./: .gitignore  Cargo.toml  README.md
crates/sobol/: README.md  build.rs
crates/sobol/src/: lib.rs  wide.rs
data/processing/: cie_xyz.py
src/: camera.rs  color.rs  frame.rs  main.rs  render.rs  sampler.rs  scene.rs  spectrum.rs  tile.rs  types.rs  upsample.rs
src/bsdf/: fresnel.rs  lambertian.rs  microfacet.rs  mod.rs  null.rs  specular.rs
src/integrator/: hwss_naive.rs  hwss_slow.rs  mod.rs  swss_naive.rs  swss_slow.rs
src/math/: matrix.rs  mis.rs  mod.rs  ord_float.rs  pdf.rs  point3.rs  ray.rs  vec3.rs  vec4.rs
src/sampling/: ggx.rs  mis.rs  mod.rs  sampler.rs
src/shape/: mod.rs  sphere.rs
src/shapes/: mod.rs  sphere.rs
src/spectrum/: constant.rs  mod.rs  sample.rs  upsample.rs  wavelength.rs
