[workspace]
members = [
    "crates/sobol"
]

[package]
name = "iris"
version = "0.1.0"
authors = ["Matt Taylor"]
edition = "2018"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
debug = true
codegen-units = 1

[dependencies]
minifb = "0.16.0"
num_cpus = "1.13.0"
sobol = { path = "crates/sobol" }
enum_dispatch = "0.3.0"
