[workspace]
members = [
    "crates/sobol"
]

[package]
name = "iris"
version = "0.1.0"
authors = ["Matt Taylor"]
edition = "2018"

[features]
default = []
progressive = ["minifb"]

[profile.dev]
opt-level = 1

[profile.release]
lto = true
debug = true
codegen-units = 1

[dependencies]
num_cpus = "1.13.0"
enum_dispatch = "0.3.5"
sobol = { path = "crates/sobol" }
minifb = { version = "0.19.2", optional = true }
openexr = "0.7.1"
