[package]
name = "iris"
version = "0.1.0"
authors = ["Matt Taylor"]
edition = "2018"

[features]
default = []
progressive = ["minifb"]

[profile.dev]
opt-level = 1

[profile.release]
lto = true
debug = true
codegen-units = 1

[dependencies]
num_cpus = "1.16"
enum_dispatch = "0.3"
sobol_burley = "0.5"
minifb = { version = "0.27", optional = true }
exr = "1.73.0"
